:bug: java 17 remove getfirst()